@@ -915,7 +915,7 @@ def main():
         elif opts.csv != None:
             app = DataExplore()
             t = app.getCurrentTable()
-            t.importCSV(opts.csv)
+            t.importCSV(opts.csv, dialog=True)#, header='infer', sep=None)
         else:
             app = DataExplore()
     app.mainloop()
